--- a/index.html
+++ b/index.html
@@ -3,22 +3,23 @@
 <head>
 <meta charset="utf-8" />
 <title>tokuhirom&#39;s blog</title>
+<link rel="stylesheet/less" type="text/css" href="less/bootstrap.less">
+<script src="js/less-1.1.4.min.js" type="text/javascript"></script>
 <!--[if IE]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<style>
-article, aside, details, figcaption, figure, footer, header,
-hgroup, menu, nav, section { display: block; }
-</style>
 </head>
 <body>
-
-<section>
-    <h1>ぶろぐはじめてみる
+<div class="container">
+    
+    <section>
+        <h1>ぶろぐはじめてみる
 </h1>
-    <p>Octopress おもしろいなーとおもったけど、なんか自分でつくったほうがたのしげかなーなんておもったりしてしまったので、自分でつくってみる。</p>
-
-</section>
-
+        <p>Octopress おもしろいなーとおもったけど、なんか自分でつくったほうがたのしげかなーなんておもったりしてしまったので、自分でつくってみる。</p>
+<pre class="code lang-perl"># comment
+say &#34;YO&#34;;</pre>
+    </section>
+    
+</div>
 </body>
 </html>
