--- a/entry/test.html
+++ b/entry/test.html
@@ -22,7 +22,7 @@
 <body>
 <div class="container-fluid">
     <header>
-        <h1>tokuhirom&#39;s blog</h1>
+        <h1><a href=".././">tokuhirom&#39;s blog</a></h1>
     </header>
     <div class="sidebar">
         <ul>
