--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet/less" type="text/css" href="less/bootstrap.less">
 <link rel="stylesheet/less" type="text/css" href="less/blog.less">
 <link rel="stylesheet" type="text/css" href="google-code-prettify/prettify.css">
+<link rel="alternate" type="application/rss+xml" title="RSS" href="index.rss" />
 <script src="js/less-1.1.4.min.js" type="text/javascript"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
 <script src="google-code-prettify/prettify.js" type="text/javascript"></script>
